--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.2",
-    "hardhat": "^2.9.2"
+    "@nomiclabs/hardhat-ethers": "2.2.2",
+    "@nomiclabs/hardhat-waffle": "2.0.3",
+    "chai": "4.3.7",
+    "ethereum-waffle": "3.4.4",
+    "ethers": "5.7.2",
+    "hardhat": "2.12.6"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@openzeppelin/contracts": "^4.5.0",
-    "@unlock-protocol/contracts": "^0.0.4",
-    "@unlock-protocol/hardhat-plugin": "^0.0.7",
-    "hardhat-etherscan": "^1.0.1"
+    "@nomiclabs/hardhat-etherscan": "3.1.5",
+    "@openzeppelin/contracts": "4.8.1",
+    "@unlock-protocol/contracts": "0.0.16",
+    "@unlock-protocol/hardhat-plugin": "0.0.18",
+    "hardhat-etherscan": "1.0.1"
   },
   "scripts": {
     "hardhat": "hardhat"
