--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openzeppelin/contracts": "4.8.1",
     "@unlock-protocol/contracts": "0.0.16",
     "@unlock-protocol/hardhat-plugin": "0.0.18",
+    "@unlock-protocol/networks": "^0.0.9",
     "hardhat-etherscan": "1.0.1"
   },
   "scripts": {
